--- a/source/less/index.less
+++ b/source/less/index.less
@@ -8,6 +8,10 @@
 	-webkit-tap-highlight-color:rgba(255,255,255,0);
 	-webkit-appearance: none;
 }
+body,html{
+  width: 100%;
+  height: 100%;
+}
 .backgroudColor{
 	width: 100%;
 	height: 100%;
@@ -15,8 +19,21 @@
 	margin: 0;
 	padding: 0;
 	font-family:  Menlo, Monaco, Consolas, "Courier New", monospace;
+  position: relative;
+  overflow: hidden;
 }
 .header{
+  position: relative;
+  .back{
+    display: block;
+    width: 100px;
+    height: 25px;
+    position: absolute;
+    background: url(../svg/iconfont-back.svg) no-repeat;
+    background-size: auto 25px;
+    margin-top: 7.5px;
+    margin-left: 15px;
+  }
 	&.view{
 		border: 0 none;
 		margin-top: 10px;
@@ -100,8 +117,8 @@
 	height: auto;
 	button{
 		display: block;
-		width: 200px;
-		height: 30px;
+		width: 250px;
+		height: 45px;
 		margin: 10px auto;
 		background: @button-color;
 		color: #fff;
@@ -143,35 +160,47 @@
 
 }
 //animate
-.item-animiate.ng-enter,
-.item-animiate.ng-leave,
-.item-animiate.ng-move {
-	-webkit-transition: 0.5s linear all;
-	-moz-transition: 0.5s linear all;
-	-o-transition: 0.5s linear all;
-	transition: 0.5s linear all;
+.item-animate {
+  width: 100%;
+  height: 100%;
+    position: absolute;
+	-webkit-transition: all 1s ease-in-out;
+	-moz-transition: all 1s ease-in-out;
+	-o-transition: all 1s ease-in-out;
+	transition: all 1s ease-in-out;
 }
-
-.item-animiate.ng-enter,
-.item-animiate.ng-move {
+.item-animate.ng-enter{
 	opacity: 0;
-	height: 0;
-	overflow: hidden;
 }
-
-.item-animiate.ng-move.ng-move-active,
-.item-animiate.ng-enter.ng-enter-active {
+.item-animate.ng-enter.ng-enter-active{
 	opacity: 1;
 }
-
-.item-animiate.ng-leave {
-	opacity: 1;
-	overflow: hidden;
+.item-animate.ng-leave{
+  opacity: 1;
 }
-
-.item-animiate.ng-leave.ng-leave-active {
+.item-animate.ng-leave.ng-leave-active{
 	opacity: 0;
-	height: 0;
-	padding-top: 0;
-	padding-bottom: 0;
+ }
+.index{
+  width: 100%;
+  height: 100%;
+}
+.todo-item{
+  transition: all 0.5s ease-in-out;
+}
+.todo-item.ng-enter-stagger{
+  transition-delay:0.5s;
+  transition-duration:0s;
+}
+.todo-item.ng-enter{
+  transform: translateX(-50%);
+  opacity: 0;
+}
+.todo-item.ng-enter.ng-enter-active{
+  transform: translateX(0%);
+  opacity: 1;
+}
+.todo-item.ng-leave.ng-leave-active{
+  transform: translateX(50%);
+  opacity: 0;
 }
